@@ -102,6 +102,7 @@ comes with this distribution for details.
 - DBD::mysqlPP
 - DBD::PgPP
 - DBD::SQLite
+- Devel::ebug
 - Devel::StackTrace
 - Digest::MD5
 - Dist::Zilla::App::Command::aliendeps
@@ -131,6 +132,7 @@ comes with this distribution for details.
 - FFI::Platypus::Lang::CPP
 - FFI::Platypus::Lang::CPP::Demangle::XS
 - FFI::Platypus::Lang::Fortran
+- FFI::Platypus::Lang::Go
 - FFI::Platypus::Lang::Pascal
 - FFI::Platypus::Lang::Rust
 - FFI::Platypus::Legacy::Raw
@@ -173,6 +175,7 @@ comes with this distribution for details.
 - Test2::Tools::HTTP
 - Test2::Tools::HTTP::UA::Mojo
 - Test2::Tools::JSON::Pointer
+- Test2::Tools::PerlCritic
 - Test2::Tools::URL
 - Test::Alien::CPP
 - Test::CChecker
