@@ -28,7 +28,7 @@ Alien::automake                                = 0.15
 Alien::Autotools                               = 1.05
 Alien::Base::ModuleBuild                       = 1.14
 Alien::bison                                   = 0.21
-Alien::Build                                   = 2.21
+Alien::Build                                   = 2.22
 Alien::Build::Git                              = 0.08
 Alien::Build::MB                               = 0.07
 Alien::Build::Plugin::Decode::SourceForge      = 0.02
@@ -56,7 +56,7 @@ Alien::Libbz2                                  = 0.24
 Alien::libnewrelic                             = 0.02
 Alien::Librdkafka                              = 1.05
 Alien::LibreSSL                                = 0.03
-Alien::libuuid                                 = 0.02
+Alien::libuuid                                 = 0.04
 Alien::libtool                                 = 0.14
 Alien::LibYAML                                 = 2.05
 Alien::Libxml2                                 = 0.16
@@ -97,6 +97,7 @@ Archive::Libarchive::FFI                       = 0.0901
 Archive::Libarchive::XS                        = 0.0902
 Browser::Start                                 = 0.01
 Class::Inspector                               = 1.36
+Devel::ebug                                    = 0.60
 Dist::Zilla::App::Command::aliendeps           = 0.03
 Dist::Zilla::Plugin::AlienBuild                = 0.30
 Dist::Zilla::Plugin::Alt                       = 0.07
@@ -116,10 +117,11 @@ FFI                                            = 1.15
 FFI::C                                         = 0.08
 FFI::CheckLib                                  = 0.27
 FFI::ExtractSymbols                            = 0.03
-FFI::Platypus                                  = 1.11
+FFI::Platypus                                  = 1.26
 FFI::Platypus::Lang::CPP                       = 0.04
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
 FFI::Platypus::Lang::Fortran                   = 0.11
+FFI::Platypus::Lang::Go                        = 0.01
 FFI::Platypus::Lang::Pascal                    = 0.06
 FFI::Platypus::Lang::Rust                      = 0.09
 FFI::Platypus::Legacy::Raw                     = 0.06
@@ -162,6 +164,7 @@ Test2::Tools::FFI                              = 0.05
 Test2::Tools::HTTP                             = 0.09
 Test2::Tools::HTTP::UA::Mojo                   = 0.04
 Test2::Tools::JSON::Pointer                    = 0.02
+Test2::Tools::PerlCritic                       = 0.03
 Test2::Tools::URL                              = 0.05
 Text::Hunspell::FFI                            = 0.02
 URI::ws                                        = 0.03
